namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-pin-phone-test/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-pin-phone-test
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "test"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "digital-canteen-launchpad-tech-team"
    cloud-platform.justice.gov.uk/slack-alert-channel: "hmpps-digital-canteen-nonprod-alerts"
    cloud-platform.justice.gov.uk/application: "PIN Phone"
    cloud-platform.justice.gov.uk/owner: "Digital Prison Services: dps-hmpps@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-pin-phone-api.git"
    cloud-platform.justice.gov.uk/team-name: "hmpps-digital-canteen-devs"
